--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,11 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: "docker udemy"
-  env: "Dockerudemy-env"
+  app: "docker"
+  env: "Docker-env"
   bucket_name: "elasticbeanstalk-us-east-2-119376223661"
-  bucket_path: "docker udemy"
+  bucket_path: "docker"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: 
-    secure: $AWS_SECRET_KEY
+  secret_access_key: $AWS_SECRET_KEY
